12-hitless-delpoy/envoy.yaml
node:
  id: node-1
  cluster: edge-gateway

static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              # Set retry policy
              retry_policy:
                retry_on: "cancelled,connect-failure,gateway-error,refused-stream,reset,resource-exhausted,unavailable"
                num_retries: 2
                host_selection_retry_max_attempts: 5

              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: upstream
          http_filters:

          - name: envoy.filters.http.health_check
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.health_check.v3.HealthCheck
              pass_through_mode: false
              headers:
              - name: ":path"
                exact_match: "/health"

          - name: envoy.filters.http.router
            typed_config: {}
  clusters:
  - name: upstream
    connect_timeout: 0.25s
    type: EDS
    common_lb_config:
      # note: disabling panic mode is needed for the demo. read the docs before setting this in your env.
      healthy_panic_threshold:
        value: 0.0

    # we are defining both active and passive health checks for demo. You may not need both.
    # passive health checks:
    outlier_detection:
      consecutive_5xx: 3

    # active health checks:
    health_checks:
    - unhealthy_threshold: 1
      healthy_threshold: 1
      interval: 1s
      no_traffic_interval: 1s
      timeout: 0.1s
      http_health_check:
        path: /health
    eds_cluster_config:
      eds_config:
        resource_api_version: V3
        api_config_source:
          api_type: GRPC
          transport_api_version: V3
          grpc_services:
            - envoy_grpc:
                cluster_name: xds_cluster
  - name: xds_cluster
    connect_timeout: 0.25s
    type: STATIC
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    upstream_connection_options:
      tcp_keepalive: {}
    load_assignment:
      cluster_name: xds_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 9977

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
